# Image-editor-on-raw-C-

./: CMakeLists.txt  LICENSE  README.md  image_processor.cpp
include/data/: image.h  pixel.h
include/filters/: all_filters.h  filter.h  filter_factory.h
include/io/: binary_reader.h  binary_writer.h  bmp.h  image_format.h
src/data/: image.cpp  pixel.cpp
src/filters/: all_filters.cpp  filter_factory.cpp
src/io/: binary_reader.cpp  binary_writer.cpp  bmp.cpp
unit_tests/: .gitlab-ci.yml  CMakeLists.txt  unit_tests.cpp
